自动发布到tomcat，汉语

--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,15 @@
   </dependencies>
   <build>
     <finalName>web</finalName>
+    <plugins>
+      <!--maven配置-->
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
